--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/marky_bank
 spring.datasource.username=root
 #spring.datasource.password=su01
 
+spring.jpa.hibernate.ddl-auto = update
+
+
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
