--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8088
 
 spring.datasource.url=jdbc:mysql://localhost:3306/marky_bank
 spring.datasource.username=root
-#spring.datasource.password=su01
+spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto = update
 spring.jackson.serialization.fail-on-empty-beans=false
